--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Shashank Agarwal",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
+  },
+  "dependencies": {
+    "chai-backend": "file:"
   }
 }
