--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "a project",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "Shashank Agarwal",
   "license": "ISC",
@@ -13,6 +14,9 @@
     "prettier": "^3.4.2"
   },
   "dependencies": {
-    "chai-backend": "file:"
+    "chai-backend": "file:",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.5"
   }
 }
